Added settings to database insert, removed misplaced text in index.html

--- a/index.html
+++ b/index.html
@@ -262,4 +262,4 @@
 <script src="js/jquery-3.2.1.slim.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
-</html> data-toggle="tooltip" title="JPEG Compression Quality"
+</html>
