--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <label class="ip" id="ip"></label>
                  | &emsp;
                 <a id="gallery" type=button class="btn btn-primary" href="gallery.php" data-toggle="tooltip" title="Photo Gallery">Photo Gallery</a>
+                <a id="environment" type=button class="btn btn-primary" href="environment.php" data-toggle="tooltip" title="Environment">Environment</a>
+                &nbsp;
+                <a id="systempage" type=button class="btn btn-primary" href="system.php" data-toggle="tooltip" title="Systen Page">System</a>
                 <label class="clock" id="clock"></label>
         </div>
     </div>
